# Nanoite

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: WriteBuildStats.cmake
include/: console.h  tin.h
src/: console.cpp  game.map  glf.cpp  glf.h  main.cpp  tin.cpp
